# ucr-suite-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure
original/: UCR_DTW.cpp  UCR_ED.cpp
src/: ucr_ed.cpp
test_data/: Readme.md
